@@ -368,6 +368,9 @@ Release 2.7.0 - UNRELEASED
     HDFS-7668. Convert site documentation from apt to markdown (Masatake
     Iwasaki via Colin P. McCabe)
 
+    HDFS-7495. Remove updatePosition argument from DFSInputStream#getBlockAt()
+    (cmccabe)
+
   OPTIMIZATIONS
 
   BUG FIXES
